argocd-apps-deprecated/k8s-rpi-apps-ingresses/invidious-ingress-vpn.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: invidious-ingress
  namespace: invidious-vpn
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<invidiousvpnhostname>.<domainname>`)
    kind: Rule
    services:
    - name: invidious
      port: 3000
  tls:
    certResolver: godaddy
